# kuncode

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
crates/kuncode-agent/: Cargo.toml
crates/kuncode-agent/src/: compaction.rs  error.rs  glob.rs  hook.rs  lib.rs  observer.rs  permission.rs  registry.rs  runner.rs  session.rs  session_store.rs  system_prompt.rs  test_support.rs  todo.rs  tool.rs  transcript.rs  workspace.rs
crates/kuncode-agent/src/compaction/: artifact.rs  budget.rs  orchestrator.rs  protocol.rs  selection.rs  slimming.rs  summary.rs
crates/kuncode-agent/src/compaction/artifact/: audit.rs  boundary.rs  hash.rs  marker.rs  preview.rs  spill.rs  tests.rs  types.rs
crates/kuncode-agent/src/compaction/artifact/spill/: runtime.rs
crates/kuncode-agent/src/compaction/artifact/tests/: checkpoint.rs  concurrency.rs  durability.rs  failures.rs  metadata.rs  multi.rs  receipt.rs  summary_binding.rs  support.rs
crates/kuncode-agent/src/compaction/budget/: config.rs  tests.rs
crates/kuncode-agent/src/compaction/budget/tests/: estimator.rs
crates/kuncode-agent/src/compaction/orchestrator/: candidate.rs  pipeline.rs  tests.rs  types.rs
crates/kuncode-agent/src/compaction/orchestrator/pipeline/: commit.rs  store.rs  validation.rs
crates/kuncode-agent/src/compaction/orchestrator/tests/: concurrency.rs  deterministic.rs  failures.rs  inherited_summary.rs  modes.rs  recursive.rs  semantic.rs  support.rs  support_fixture.rs  support_store.rs
crates/kuncode-agent/src/compaction/protocol/: grouping.rs  protection.rs  tests.rs
crates/kuncode-agent/src/compaction/protocol/tests/: anchor.rs  boundaries.rs  grouping.rs  selection.rs
crates/kuncode-agent/src/compaction/selection/: tests.rs
crates/kuncode-agent/src/compaction/selection/tests/: boundaries.rs
crates/kuncode-agent/src/compaction/slimming/: marker.rs  policy.rs  tests.rs  types.rs
crates/kuncode-agent/src/compaction/slimming/tests/: binding.rs  boundaries.rs  identity.rs  invariants.rs  provenance.rs  retention.rs
crates/kuncode-agent/src/compaction/summary/: projection.rs  prompt.rs  summarizer.rs  tests.rs  types.rs  validation.rs
crates/kuncode-agent/src/permission/: approval.rs  approver.rs  check.rs  contribution.rs  engine.rs  gate.rs  policy.rs  profile.rs  receipt.rs  request.rs  rule.rs  state.rs  target.rs
crates/kuncode-agent/src/runner/: cancellation.rs  compaction.rs  events.rs  iteration.rs  loop_control.rs  request.rs  setup.rs  tests.rs  tool_authorization.rs  tool_execution.rs  tool_gate.rs  turn.rs
crates/kuncode-agent/src/runner/compaction/: artifact_counter.rs  cancellable_summary.rs  events.rs  shadow.rs
crates/kuncode-agent/src/runner/request/: runtime_state.rs
crates/kuncode-agent/src/runner/tests/: automatic_compaction.rs  automatic_compaction_sqlite.rs  automatic_compaction_turso.rs  cancellation.rs  compaction_fail_closed.rs  compaction_guard.rs  compaction_redaction.rs  core_flow.rs  events.rs  hooks_prompt.rs  hooks_tool_stop.rs  large_tool_result_compaction.rs  lineage.rs  observers_persistence.rs  persistence_todo.rs  persistence_warnings.rs  support.rs  support_tools.rs  todo_errors.rs  turn_and_permissions.rs
crates/kuncode-agent/src/session/: compaction.rs  lineage.rs  persistence.rs  tests.rs
crates/kuncode-agent/src/session/tests/: lineage.rs
crates/kuncode-agent/src/session_store/: artifact.rs  dto.rs  error.rs  hash.rs  model.rs  sqlite.rs  turso.rs
crates/kuncode-agent/src/session_store/artifact/: receipt.rs
crates/kuncode-agent/src/session_store/dto/: conversion.rs
crates/kuncode-agent/src/session_store/model/: compaction.rs
crates/kuncode-agent/src/session_store/sqlite/: artifact.rs  checkpoint.rs  compaction.rs  head.rs  journal.rs  schema.rs  tests.rs
crates/kuncode-agent/src/session_store/turso/: artifact.rs  checkpoint.rs  compaction.rs  schema.rs  tests.rs
crates/kuncode-agent/src/tool/: bash.rs  filesystem.rs  output.rs  todo_write.rs
crates/kuncode-agent/src/tool/filesystem/: edit_file.rs  glob.rs  helpers.rs  read_file.rs  test_support.rs  write_file.rs
crates/kuncode-cli/: Cargo.toml
crates/kuncode-cli/src/: approver.rs  config.rs  hook.rs  logging.rs  main.rs  observer.rs  runtime.rs  settings.rs  tui.rs  view.rs
crates/kuncode-cli/src/runtime/: tests.rs
crates/kuncode-cli/src/settings/: tests.rs
crates/kuncode-cli/src/tui/: app.rs  bridge.rs  ui.rs
crates/kuncode-cli/src/tui/app/: approval.rs  input.rs  tests.rs
crates/kuncode-cli/src/tui/ui/: conversation.rs  tests.rs
crates/kuncode-cli/tests/: version.rs
crates/kuncode-core/: Cargo.toml
crates/kuncode-core/src/: budgets.rs  capability.rs  completion.rs  effect.rs  error.rs  ids.rs  json_utils.rs  lib.rs  non_empty_vec.rs  providers.rs  risk.rs  role.rs  status.rs  tool_error_kind.rs
crates/kuncode-core/src/completion/: message.rs  request.rs  retry.rs  streaming.rs
crates/kuncode-core/src/providers/: any_chat.rs  chat_completions.rs  deepseek.rs  openai.rs  openai_compatible.rs
crates/kuncode-core/src/providers/chat_completions/: streaming.rs
crates/kuncode-core/src/providers/deepseek/: model.rs  protocol.rs
crates/kuncode-core/src/providers/openai/: protocol.rs
crates/kuncode-events/: Cargo.toml
crates/kuncode-events/src/: artifact.rs  envelope.rs  error.rs  jsonl.rs  lib.rs  run_dir.rs
crates/kuncode-events/tests/: event_log.rs  jsonl_corruption.rs  tool_events.rs
crates/kuncode-tools/: Cargo.toml
crates/kuncode-tools/src/: capability.rs  context.rs  descriptor.rs  error.rs  input.rs  lib.rs  result.rs  runtime.rs  schema.rs  tools.rs
crates/kuncode-tools/src/tools/: apply_patch.rs  common.rs  exec_argv.rs  git_diff.rs  git_status.rs  read_file.rs  search.rs  write_file.rs
crates/kuncode-tools/tests/: apply_patch.rs  builtin_catalog.rs  exec_argv.rs  git.rs  read_file.rs  runtime.rs  search.rs  write_file.rs
crates/kuncode-tools/tests/support/: mod.rs
crates/kuncode-workspace/: Cargo.toml
crates/kuncode-workspace/src/: lib.rs
crates/kuncode-workspace/tests/: path_safety.rs
(+50 files in other folders)
