[workspace]
members = [
    "crates/kuncode-agent",
    "crates/kuncode-cli",
    "crates/kuncode-core",
]
default-members = ["crates/kuncode-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = "4.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = "0.13.3"
thiserror = "2.0.18"
async-trait = "0.1.89"
