[workspace]
members = [
    "crates/kuncode-agent",
    "crates/kuncode-cli",
    "crates/kuncode-core",
]
default-members = ["crates/kuncode-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
clap = "4.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
reqwest = { version = "0.13.3", default-features = false }
thiserror = "2.0.18"
async-trait = "0.1.89"
ignore = "0.4.23"
tracing = "0.1.44"
futures-core = "0.3.31"
async-stream = "0.3.6"
dotenvy = "0.15.7"
ratatui = "0.30.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
