[package]
name = "kuncode-agent"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
ignore = { workspace = true }
kuncode-core = { path = "../kuncode-core" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
