[package]
name = "kuncode-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "kuncode"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
kuncode-core = { path = "../kuncode-core" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
