[package]
name = "kuncode-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kuncode"
path = "src/main.rs"

[dependencies]
kuncode-core = { path = "../kuncode-core" }
kuncode-agent = { path = "../kuncode-agent" }
tokio = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }

[dev-dependencies]

