[package]
name = "kuncode-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
