[package]
name = "kuncode-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "stream",
    "rustls",
    "http2",
] }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
