[package]
name = "kuncode-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
kuncode-core = { path = "../kuncode-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
tempfile = { workspace = true }
